remove old caching mechanism for relations, where neeeded put into Immutable graph relationship